2009-12-14  Raul Mateos  <raulofpandora@gmail.com>

	* util/pandora_db.pl: Improved help.

2009-12-14  Raul Mateos  <raulofpandora@gmail.com>

	* lib/PandoraFMS/Core.pm: Changed spaces for tabs.

	* lib/PandoraFMS/Config.pm: Updated build to last change. Changed spaces
	for tabs.

2009-12-07  Raul Mateos  <raulofpandora@gmail.com>

	* pandora_server_installer: Added variables and used in the code.
	Added Ubuntu specific stop scripts. Added link removing with update-rc.d.

2009-12-05  Sancho Lerena <slerena@artica.es>

	* lib/PandoraFMS/Core.pm: Fixed bug #2905434

2009-11-28  Raul Mateos  <raulofpandora@gmail.com>

	* lib/PandoraFMS/Config.pm: Changed string from RC2 to RC3.
	Updated build due to last changes.

	* DEBIAN/control, DEBIAN/make_deb_package.sh: Changed string from rc2
	to RC3

2009-11-23  Ramon Novoa  <rnovoa@artica.es>

	* util/pandora_db.pl: Removed the last call to UnixDate.

2009-11-19  Sancho Lerena <slerena@artica.es>

	* lib/PandoraFMS/Core.pm: Added id_alert to alert macros. Could be
	useful to pass a numeric ID to do alert correlation externally to 
	Pandora FMS.

	* util/plugin/ssh_pandoraplugin.sh: Fixed bug in user parameter 
	processing. Thanks Victoria.

	* util/plugin/udp_nmap_plugin.sh: Removed output of errors.

2009-11-19  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Check for empty module/agent when processing
	  module data.

2009-11-13  Ramon Novoa  <rnovoa@artica.es>

	* conf/pandora_server.conf: Updated configuration tokens.

	* lib/PandoraFMS/SNMPServer.pm, lib/PandoraFMS/Config.pm,
	  lib/PandoraFMS/PluginServer.pm, lib/PandoraFMS/PredictionServer.pm,
	  lib/PandoraFMS/Core.pm, lib/PandoraFMS/ReconServer.pm,
	  lib/PandoraFMS/DataServer.pm, lib/PandoraFMS/NetworkServer.pm,
	  lib/PandoraFMS/Tools.pm, lib/PandoraFMS/WMIServer.pm,
	  bin/pandora_server: Standardized and improved logging.

2009-11-10  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Fixed forced alert execution. Substitute alert