@@ -36,8 +36,8 @@ our @EXPORT = qw(
 	);
 
 # version: Defines actual version of Pandora Server for this module only
-my $pandora_version = "3.0RC3";
-my $pandora_build = "PS091205";
+my $pandora_version = "3.0";
+my $pandora_build = "091216";
 our $VERSION = $pandora_version." ".$pandora_build;
 
 # Setup hash
